<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/language"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/alarm"
        android:title="@string/alarm"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>